# smarthome

./: CMakeLists.txt  Database.cpp  Database.h  Home.cpp  Home.h  Makefile  README.md  RequestManager.cpp  RequestManager.h  Socket.cpp  Socket.h  User.cpp  User.h  cronjobs.txt  home.txt  install.sh  main.cpp  smart  smart_home
DB/: crondb.c  dbInit  dbInit.c  dbInit.sh  smarthome.db
